Updates security config
