# recipe-manager-service/src/main/java/com/abnamro/assignment/recipemanager/model/Recipe.java
@@ -16,7 +16,6 @@ import javax.persistence.OneToMany;
 import javax.persistence.PrePersist;
 import javax.persistence.PreUpdate;
 import javax.persistence.Table;
-import java.time.LocalDateTime;
 import java.time.OffsetDateTime;
 import java.util.HashSet;
 import java.util.Set;
@@ -34,8 +33,8 @@ public class Recipe {
     private String recipeId;
     @Column(name = "recipe_name")
     private String recipeName;
-    @Column(name = "dish_type")
-    private String dishType;
+    @Column(name = "dish_type", columnDefinition = "boolean default false")
+    private Boolean dishType;
     @Column(name = "no_of_people_suitable")
     private Long noOfPeopleSuitable;
     @OneToMany(
@@ -50,7 +49,7 @@ public class Recipe {
     @Column(name = "update_date_time")
     private OffsetDateTime updateDateTime;
     @ManyToOne
-    @JoinColumn(name="user_id", nullable=false)
+    @JoinColumn(name = "user_id", nullable = false)
     private UserProfile userProfile;
 
     @PrePersist
